# VulnHunterX

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  env.example  pyproject.toml
.agents/: AGENTS.md  coding_conventions.md  dependency_management.md  development_environment.md  file_naming.md  language_policy.md  project_architectures.md  project_structure.md  python_version.md  security.md  testing.md
.claude/: settings.json
.claude/agents/: security-vibe-coder.md
.cursor/rules/: README.md  coding_conventions.mdc  fast-mcp.mdc  project.mdc  security.mdc  testing.mdc  vibe-safety.mdc
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  tech-debt.yml  verdict-pattern.yml  verdict-report.yml
benchmark/: README.md
benchmark/config/: deepseek-deepseek-v4-flash-temp0-iter5.yaml  ollama-qwen3-coder-480b-cloud-temp0-iter5.yaml  openai-gpt-4.1-mini-temp0-iter5.yaml  openai-gpt-5-temp0-iter5.yaml  openai-gpt-5.5-temp0-iter5.yaml
benchmark/src/: benchmark.py  harness.py  scoring.py
benchmark/tests/: conftest.py  test_cli.py  test_compare.py  test_grading.py  test_harness.py  test_migration.py  test_render.py  test_resources.py  test_score_build.py  test_validate.py
benchmarks/: README.md  RESEARCH.md  __init__.py  datasets.yaml
benchmarks/adapters/: __init__.py  cvefixes_adapter.py  cwe_rule_map.py  diversevul_adapter.py  ground_truth.py  juliet_adapter.py  openvuln_adapter.py  owasp_benchmark_adapter.py  realvuln_adapter.py  registry.py  secllmholmes_adapter.py  security_rules_adapter.py
benchmarks/approaches/: __init__.py  ablation.py  base.py  generic_questions.py  raw_sast.py  registry.py  single_shot.py  vulnhunterx.py
benchmarks/config/: .env.alibaba.example  .env.anthropic.qwen3.example  .env.deepseek.example  .env.google.example  .env.ollama.example  .env.ollama.local.example  .env.openai.example  .env.zai.example  benchmark.yaml  models.yaml  models.yaml.example
benchmarks/fixtures/: cvefixes_sample.json  diversevul_sample.json  juliet_sample.json  openvuln_sample.json  owasp_benchmark_sample.json  realvuln_sample.json  secllmholmes_sample.json  security-rules_sample.json
benchmarks/metrics/: __init__.py  cost.py  deepseek_v4_cost.py  evaluator.py  stats.py
benchmarks/scripts/: _progress.py  compare_models.py  generate_report.py  run_benchmark.py  run_model_matrix.py  setup_datasets.py
config/: RULES.md  confirm_findings.yaml  repos.yaml  rule_categories.yaml
config/codeql-custom/: README.md
config/opengrep-rules/: NOTICE.md
config/policies/: command_injection.yaml  log_injection.yaml  path_access.yaml  sql_injection.yaml  xpath_injection.yaml
config/prompts/: README.md  cpp_questions.yaml  cs_questions.yaml  default_questions.yaml  go_questions.yaml  guided_questions.yaml  java_questions.yaml  javascript_questions.yaml  php_questions.yaml  python_questions.yaml  system_prompt.yaml
config/semgrep-custom/: README.md  cpp.yaml  csharp.yaml  go.yaml  java.yaml  javascript.yaml  php.yaml  python.yaml
docs/: CI_CD.md  FAQ.md  FUZZING.md  INSTALLATION.md  INTERPRETING_RESULTS.md  LLM_PROVIDERS.md  METHODOLOGY.md  README.md  RULE_PROFILES.md  TROUBLESHOOTING.md  codeql_cpp_security.md  codeql_javascript_security.md  codeql_python_security.md  codeql_security_checks.md  conf-abstract.html  conf-abstract.md  context-extraction-flow.md  fuzz-pipeline.md  fuzz_stages.md  guided_questions_research.md
docs/benchmarks/: ground-truth-baselines.md
docs/design/: 2026-06-22-issue118-code-slice-design.md  2026-06-22-issue118-implementation-plan.md  2026-06-22-issue118-rerun-results.md  2026-07-02-refactor-triage-fn-dashboard-plan.md  (+6 more)
docs/training/: QUIZ.md  (+5 more)
examples/: README.md  basic_usage.py  pipeline_c-ares.py  pipeline_c.py  pipeline_cpp.py  pipeline_csharp.py  pipeline_go.py  pipeline_java.py  pipeline_javascript.py  pipeline_libjpeg-turbo copy.py  pipeline_libjpeg-turbo.py  pipeline_libvorbis.py  pipeline_php.py  pipeline_python.py  pipeline_zlib.py  run_all_pipelines.py
scripts/: audit_rule_coverage.py  check_env.py  clone_and_db.py  confirm_findings.py  confirm_findings_v2.py  extract_context.py  prepare_release.sh  refresh_opengrep_rules.sh  run_codeql_analysis.py  setup-labels.sh
tests/: test_121_taint_source_reachability.py  test_146_prompt_genericization.py  test_149_envelope_reliability.py  test_adapter_contract.py  test_analyze_context_hook.py  test_analyze_resolution.py  test_anchor_resolver.py  test_arm_c.py  test_benchmark_adapters.py  test_benchmark_anchor.py  test_benchmark_cost.py  test_benchmark_metrics.py  test_benchmark_resume.py  test_benchmark_stats.py  test_calibration_fixes.py  test_check_env.py  test_cli_env.py  test_clone_and_db.py  test_confirm_findings.py  test_context_extractor.py  test_context_prompt_parity.py  test_context_provider.py  test_context_provider_typed.py  test_crash_triage.py  test_custom_codeql_queries.py  test_custom_semgrep_rules.py  test_cwe_question_matching.py  test_evidence_binding.py  test_evidence_contract.py  test_finalizer_isolation.py  test_framework.py  test_fuzz_context_enriched.py  test_fuzz_driver_generator.py  test_fuzz_improvements.py  test_fuzz_symbol_analysis.py  test_interactive_wizard.py  test_llm_client.py  test_llm_client_pool.py  test_llm_completion_helper.py  test_llm_key_pool.py  (+61 more)
(+1395 files in other folders)
