[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeql-llm"
version = "0.1.0"
description = "Demo: LLM-enhanced CodeQL bug verification (OpenAI and Ollama)"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
dependencies = [
    "litellm>=1.50.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.setuptools]
packages = []
# No Python package; scripts and config live in scripts/, config/

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
