[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeql-llm"
version = "0.1.0"
description = "CodeQL + LLM Bug Verification Framework - Vulnhalla-style guided analysis"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [
    { name = "CodeQLxLLM Team" }
]
keywords = ["codeql", "llm", "security", "static-analysis", "vulnerability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "litellm>=1.50.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.0",
]

[project.scripts]
codeql-llm = "codeql_llm.cli.main:main"

# [project.urls]
# Update these URLs when publishing to a repository
# Homepage = "https://github.com/vinsoc-cyber/CodeQLxLLM"
# Documentation = "https://github.com/vinsoc-cyber/CodeQLxLLM#readme"
# Repository = "https://github.com/vinsoc-cyber/CodeQLxLLM"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["codeql_llm*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
