[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnhunterx"
version = "0.1.0"
description = "SAST (CodeQL, Semgrep) + fuzzing + LLM vulnerability hunting and verification"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [
    { name = "VinSOC Cyber" }
]
keywords = ["codeql", "llm", "security", "static-analysis", "vulnerability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "litellm>=1.50.0,<2.0.0",
    # litellm imports tenacity lazily for its retry path but does not pin it,
    # so declare it explicitly — otherwise LLM calls fail with
    # "No module named 'tenacity'" (e.g. benchmark pre-flight).
    "tenacity>=8.0,<10.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pyyaml>=6.0,<7.0.0",
    "tree-sitter>=0.23,<1.0.0",
    "tree-sitter-c>=0.23,<1.0.0",
    "tree-sitter-cpp>=0.23,<1.0.0",
    "tree-sitter-python>=0.23,<1.0.0",
    "tree-sitter-javascript>=0.23,<1.0.0",
    "tree-sitter-java>=0.23,<1.0.0",
    "tree-sitter-php>=0.23,<1.0.0",
    "tree-sitter-go>=0.23,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
]
benchmark = [
    "pandas>=2.0",
    "tabulate>=0.9",
    "matplotlib>=3.8",
]

[project.scripts]
vuln-hunter-x = "vuln_hunter_x.cli.main:main"

[project.urls]
Homepage = "https://github.com/vinsoc-cyber/VulnHunterX"
Documentation = "https://github.com/vinsoc-cyber/VulnHunterX#readme"
Repository = "https://github.com/vinsoc-cyber/VulnHunterX"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["vuln_hunter_x*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing --cov-report=html:output/htmlcov"

[tool.coverage.run]
data_file = "output/.coverage"
